--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,10 @@ on:
 permissions:
   contents: write
 
+env:
+  FLUTTER_VERSION: '3.24.0'
+  BUILD_VERSION: ${{ github.ref_name }}
+
 jobs:
   build:
     strategy:
@@ -42,9 +46,20 @@ jobs:
       - name: Install dependencies
         run: uv sync --frozen --group dev
 
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+
+      - name: Install Linux dependencies
+        if: matrix.platform == 'linux'
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y ninja-build libgtk-3-dev
+
       - name: Build for ${{ matrix.platform }}
         run: |
-          flet build ${{ matrix.platform }} --metadata-version 1
+          flet build ${{ matrix.platform }} --verbose --build-version ${{ env.BUILD_VERSION }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
