--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Build for ${{ matrix.platform }}
         run: |
-          flet build ${{ matrix.platform }} --verbose --build-version ${{ env.BUILD_VERSION }}
+          uv run flet build ${{ matrix.platform }} --verbose --build-version ${{ env.BUILD_VERSION }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
