--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "flet-cli>=0.80.5",
-    "flet-desktop-light>=0.80.5",
+    "flet-desktop>=0.80.5",
     "flet-web>=0.80.5",
 ]
 
