--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,6 +59,9 @@ jobs:
 
       - name: Build for ${{ matrix.platform }}
         run: |
+          if [ "${{ matrix.platform }}" == "windows" ]; then
+            export PYTHONIOENCODING=utf-8
+          fi
           uv run flet build ${{ matrix.platform }} --verbose --build-version ${{ env.BUILD_VERSION }}
 
       - name: Upload artifacts
