--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,10 +58,9 @@ jobs:
           sudo apt-get install -y ninja-build libgtk-3-dev
 
       - name: Build for ${{ matrix.platform }}
+        env:
+          PYTHONIOENCODING: utf-8 # Only needed for Windows
         run: |
-          if [ "${{ matrix.platform }}" == "windows" ]; then
-            export PYTHONIOENCODING=utf-8
-          fi
           uv run flet build ${{ matrix.platform }} --verbose --build-version ${{ env.BUILD_VERSION }}
 
       - name: Upload artifacts
