--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,96 +1,128 @@
 name: Release Build
 
 on:
-  release:
-    types: [published]
-
-permissions:
-  contents: write
+  push:
+    tags:
+      - "*"
 
 env:
-  FLUTTER_VERSION: '3.38.7'
-  BUILD_VERSION: ${{ github.ref_name }}
+  UV_PYTHON: 3.11   # Python version
+  PYTHONUTF8: 1
+
+  # https://docs.flet.dev/publish/
+  BUILD_NUMBER: 1
+  BUILD_VERSION: 1.0.0
+
+  # https://docs.flet.dev/reference/environment-variables
+  FLET_CLI_NO_RICH_OUTPUT: 1
 
 jobs:
   build:
+    name: Build ${{ matrix.name }}
+    runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-latest
-            platform: linux
-            artifact_name: time-tracker-linux
-          - os: windows-latest
-            platform: windows
-            artifact_name: time-tracker-windows
-          - os: macos-latest
-            platform: macos
-            artifact_name: time-tracker-macos
+          # -------- Desktop --------
+          - name: linux
+            runner: ubuntu-latest
+            build_cmd: "flet build linux --yes --verbose --build-number=$BUILD_NUMBER --build-version=$BUILD_VERSION"
+            artifact_path: build/linux
+            needs_linux_deps: true
 
-    runs-on: ${{ matrix.os }}
+          - name: macos
+            runner: macos-latest
+            build_cmd: "flet build macos --yes --verbose --build-number=$BUILD_NUMBER --build-version=$BUILD_VERSION"
+            artifact_path: build/macos
+            needs_linux_deps: false
+
+          - name: windows
+            runner: windows-latest
+            build_cmd: "flet build windows --yes --verbose --build-number=$BUILD_NUMBER --build-version=$BUILD_VERSION"
+            artifact_path: build/windows
+            needs_linux_deps: false
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v4
-        with:
-          enable-cache: true
-
-      - name: Install dependencies
-        run: uv sync --frozen --group dev
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v6
 
       - name: Install Linux dependencies
-        if: matrix.platform == 'linux'
+        if: matrix.needs_linux_deps
+        shell: bash
         run: |
-          sudo apt-get update -y
-          sudo apt-get install -y ninja-build libgtk-3-dev
+          sudo apt update --allow-releaseinfo-change
+          sudo apt-get install -y --no-install-recommends \
+            clang \
+            ninja-build \
+            libgtk-3-dev \
+            libasound2-dev \
+            libmpv-dev \
+            mpv \
+            libgstreamer1.0-dev \
+            libgstreamer-plugins-base1.0-dev \
+            libgstreamer-plugins-bad1.0-dev \
+            gstreamer1.0-plugins-base \
+            gstreamer1.0-plugins-good \
+            gstreamer1.0-plugins-bad \
+            gstreamer1.0-plugins-ugly \
+            gstreamer1.0-libav \
+            gstreamer1.0-tools \
+            gstreamer1.0-x \
+            gstreamer1.0-alsa \
+            gstreamer1.0-gl \
+            gstreamer1.0-gtk3 \
+            gstreamer1.0-qt5 \
+            gstreamer1.0-pulseaudio \
+            pkg-config \
+            libsecret-1-0 \
+            libsecret-1-dev
+          sudo apt-get clean
 
-      - name: Build for ${{ matrix.platform }}
-        env:
-          PYTHONIOENCODING: utf-8 # Only needed for Windows
+      - name: Build app
+        shell: bash
         run: |
-          uv run flet build ${{ matrix.platform }} --verbose --build-version ${{ env.BUILD_VERSION }}
+          uv run ${{ matrix.build_cmd }}
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v5.0.0
         with:
-          name: ${{ matrix.artifact_name }}
-          path: |
-            build/${{ matrix.platform }}/**
-          retention-days: 5
+          name: ${{ matrix.name }}-build-artifact
+          path: ${{ matrix.artifact_path }}
+          if-no-files-found: error
+          overwrite: false
 
-  create-release:
+  release:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
           path: artifacts
+          merge-multiple: false
 
-      - name: Create Release
+      - name: Rename artifacts with version tag
+        run: |
+          TAG_NAME="${GITHUB_REF#refs/tags/}"
+          mv artifacts/linux-build-artifact "artifacts/linux-${TAG_NAME}"
+          mv artifacts/macos-build-artifact "artifacts/macos-${TAG_NAME}"
+          mv artifacts/windows-build-artifact "artifacts/windows-${TAG_NAME}"
+          ls -la artifacts/
+
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
+          name: "Release ${{ github.ref_name }}"
           files: |
-            artifacts/time-tracker-linux/**
-            artifacts/time-tracker-windows/**
-            artifacts/time-tracker-macos/**
-          draft: false
-          prerelease: false
+            artifacts/linux-*
+            artifacts/macos-*
+            artifacts/windows-*
+          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
